--- a/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
+++ b/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       selected-cluster: ${{ steps.set-output.outputs.cluster }}
-    env:
-     CLUSTER_NAME= ${{ steps.set-output.outputs.cluster }}
     steps:
       - name: Resolve DNS
         id: resolve
@@ -25,7 +23,7 @@ jobs:
             echo "Unknown IP resolved: $IP"
             exit 1
           fi
-          echo $CLUSTER_NAME
+          echo $GITHUB_OUTPUT
         shell: bash
 
   aks-backup:
