--- a/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
+++ b/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
@@ -26,12 +26,12 @@ jobs:
 
   aks-backup:
     needs: determine-cluster
-    if: needs.determine-cluster.outputs.selected-cluster == "aks"
+    if: needs.determine-cluster.outputs.selected-cluster == 'aks'
     uses: ./.github/workflows/AKS-VeleroBackupAndRclone.yml
     secrets: inherit
 
   gke-backup:
     needs: determine-cluster
-    if: needs.determine-cluster.outputs.selected-cluster == "gke"
+    if: needs.determine-cluster.outputs.selected-cluster == 'gke'
     uses: ./.github/workflows/GKE-VeleroBackupAndRclone.yml
     secrets: inherit
