--- a/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
+++ b/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
@@ -28,13 +28,22 @@ jobs:
           echo "Cluster resolved from step: ${{ steps.resolve.outputs.cluster }}"
 
   aks-backup:
+    name: Debug Aks Backup Job
     needs: determine-cluster
-    if: needs.determine-cluster.resolve.outputs.selected-cluster == 'aks'
-    uses: ./.github/workflows/AKS-VeleroBackupAndRclone.yml
-    secrets: inherit
+    if: needs.determine-cluster.outputs.selected-cluster == 'aks'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print confirm AKS backup should run
+        run: echo "AKS backup job is triggered "
 
-  gke-backup:
-    needs: determine-cluster
-    if: needs.determine-cluster.resolve.outputs.selected-cluster == 'gke'
-    uses: ./.github/workflows/GKE-VeleroBackupAndRclone.yml
-    secrets: inherit
+  # aks-backup:
+  #   needs: determine-cluster
+  #   if: needs.determine-cluster.outputs.selected-cluster == 'aks'
+  #   uses: ./.github/workflows/AKS-VeleroBackupAndRclone.yml
+  #   secrets: inherit
+
+  # gke-backup:
+  #   needs: determine-cluster
+  #   if: needs.determine-cluster.resolve.outputs.selected-cluster == 'gke'
+  #   uses: ./.github/workflows/GKE-VeleroBackupAndRclone.yml
+  #   secrets: inherit
