--- a/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
+++ b/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
@@ -4,45 +4,45 @@ on:
   push:
     branches:
       - velvobackuptest
+
 jobs:
   determine-cluster:
     runs-on: ubuntu-latest
     outputs:
-      selected-cluster: ${{ steps.set-output.outputs.cluster }}
+      selected-cluster: ${{ steps.resolve.outputs.cluster }}
     steps:
-      - name: Resolve DNS
+      - name: Resolve DNS and set output
         id: resolve
         run: |
           IP=$(nslookup multiclouddr.trafficmanager.net | grep 'Address:' | tail -n1 | awk '{print $2}')
           echo "Resolved IP: $IP"
           if [ "$IP" == "4.246.216.66" ]; then
-            echo "cluster=aks" >> $GITHUB_OUTPUT
+            echo "cluster=aks" >> "$GITHUB_OUTPUT"
           elif [ "$IP" == "35.188.36.154" ]; then
-            echo "cluster=gke" >> $GITHUB_OUTPUT
+            echo "cluster=gke" >> "$GITHUB_OUTPUT"
           else
             echo "Unknown IP resolved: $IP"
             exit 1
           fi
-      - name: Debug output
-        run: |
-          echo "Cluster resolved from step: ${{ steps.resolve.outputs.cluster }}"
 
   aks-backup:
     name: Debug Aks Backup Job
     needs: determine-cluster
+    # Uncomment when ready to conditionally trigger
+    # if: needs.determine-cluster.outputs.selected-cluster == 'aks'
     runs-on: ubuntu-latest
     steps:
       - name: Print confirm AKS backup should run
-        run: echo ${{ needs.determine-cluster.outputs.selected-cluster }}
+        run: |
+          echo "selected-cluster is: ${{ needs.determine-cluster.outputs.selected-cluster }}"
 
-  # aks-backup:
-  #   needs: determine-cluster
-  #   if: needs.determine-cluster.outputs.selected-cluster == 'aks'
-  #   uses: ./.github/workflows/AKS-VeleroBackupAndRclone.yml
-  #   secrets: inherit
-
-  # gke-backup:
-  #   needs: determine-cluster
-  #   if: needs.determine-cluster.resolve.outputs.selected-cluster == 'gke'
-  #   uses: ./.github/workflows/GKE-VeleroBackupAndRclone.yml
-  #   secrets: inherit
+  gke-backup:
+    name: Debug GKE Backup Job
+    needs: determine-cluster
+    # Uncomment when ready to conditionally trigger
+    # if: needs.determine-cluster.outputs.selected-cluster == 'gke'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print confirm GKE backup should run
+        run: |
+          echo "selected-cluster is: ${{ needs.determine-cluster.outputs.selected-cluster }}"
