--- a/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
+++ b/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
@@ -26,25 +26,15 @@ jobs:
           fi
 
   aks-backup:
-    name: Debug Aks Backup Job
+    name: Run AKS Velero Backup Job and Rclone Sync
     needs: determine-cluster
     if: needs.determine-cluster.outputs.selected-cluster == 'aks'
     uses: ./.github/workflows/AKS-VeleroBackupAndRclone.yml
     secrets: inherit
-    # runs-on: ubuntu-latest
-    # steps:
-    #   - name: Print confirm AKS backup should run
-    #     run: |
-    #       echo "selected-cluster is: ${{ needs.determine-cluster.outputs.selected-cluster }}"
 
   gke-backup:
-    name: Debug GKE Backup Job
+    name: Run GKE Velero Backup Job and Rclone Sync
     needs: determine-cluster
     if: needs.determine-cluster.outputs.selected-cluster == 'gke'
     uses: ./.github/workflows/GKE-VeleroBackupAndRclone.yml
     secrets: inherit
-    # runs-on: ubuntu-latest
-    # steps:
-    #   - name: Print confirm GKE backup should run
-    #     run: |
-    #       echo "selected-cluster is: ${{ needs.determine-cluster.outputs.selected-cluster }}"
