--- a/.github/workflows/AKS-VeleroBackupAndRclone.yml
+++ b/.github/workflows/AKS-VeleroBackupAndRclone.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Trigger AKS Backup
         run: |
           TIMESTAMP=$(date +%Y%m%d%H%M)
-          velero backup create aks-backup-$TIMESTAMP --include-namespaces default
+          velero backup create daily-backup-$TIMESTAMP --include-namespaces default
 
       - name: Wait for Backup Progress
         run: sleep 40
