--- a/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
+++ b/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
@@ -27,14 +27,14 @@ jobs:
 
   AKS-Cluster-Is-Active:
     name: Run AKS Velero Backup Job and Rclone Sync
-    needs: determine-cluster
+    needs: Determine-Active-Cluster
     if: needs.determine-cluster.outputs.selected-cluster == 'aks'
     uses: ./.github/workflows/AKS-VeleroBackupAndRclone.yml
     secrets: inherit
 
   GKE-Cluster-Is-Active:
     name: Run GKE Velero Backup Job and Rclone Sync
-    needs: determine-cluster
+    needs: Determine-Active-Cluster
     if: needs.determine-cluster.outputs.selected-cluster == 'gke'
     uses: ./.github/workflows/GKE-VeleroBackupAndRclone.yml
     secrets: inherit
