--- a/.github/workflows/GKE-VeleroBackupAndRclone.yml
+++ b/.github/workflows/GKE-VeleroBackupAndRclone.yml
@@ -3,8 +3,9 @@ name: GKE Velero Backup and Cross-Cloud Sync
 on: [workflow_call]
 
 jobs:
-  GKE-Velero-Backup-and-Rclone:
+  GKE-Cluster-velero-backup:
     runs-on: ubuntu-latest
+
     env:
       BUCKET_NAME: velero-backup-gke-cluster
       PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
@@ -23,9 +24,13 @@ jobs:
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Install GKE gcloud auth plugin
+      - name: Install gke-gcloud-auth-plugin
         run: |
-          sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+         gcloud components list
+         echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+         curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+          sudo apt update
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
       - name: Get GKE credentials
         run: |
@@ -35,8 +40,10 @@ jobs:
 
       - name: Verify GKE Access
         run: |
+          kubectl cluster-info
           kubectl get nodes
-          kubectl get pods -n velero
+          kubectl get pods
+          kubectl get svc
 
       - name: Install Velero CLI
         run: |
@@ -56,18 +63,23 @@ jobs:
             --backup-location-config serviceAccount=velero@$PROJECT_ID.iam.gserviceaccount.com \
             --secret-file ./credentials-velero.json \
             --use-node-agent \
-            --default-volumes-to-fs-backup
+            --default-volumes-to-fs-backup \
+            --velero-pod-cpu-request=200m \
+            --velero-pod-mem-request=128Mi \
+            --node-agent-pod-cpu-request=200m \
+            --node-agent-pod-mem-request=256Mi
 
-      - name: Wait for Velero Agent To be Ready
-        run: sleep 15
-
-      - name: Trigger GKE Backup
+      - name: Wait Velero Agent To be Ready
+        run: |
+         sleep 10
+      - name: Trigger Backup
         run: |
           TIMESTAMP=$(date +%Y%m%d%H%M)
           velero backup create daily-backup-$TIMESTAMP --include-namespaces default
 
-      - name: Wait for Backup Process
-        run: sleep 40
+      - name: Wait Backup Process
+        run: |
+         sleep 40
 
       - name: Show Backups Status
         run: velero backup get
