--- a/.github/workflows/AKS-VeleroBackupAndRclone.yml
+++ b/.github/workflows/AKS-VeleroBackupAndRclone.yml
@@ -1,10 +1,10 @@
 name: AKS Velero Backup and Cross-Cloud Sync
 
-#on: [workflow_call]
-on:
-  push:
-    branches:
-      - velvobackuptest
+on: [workflow_call]
+# on:
+#   push:
+#     branches:
+#       - velvobackuptest
 jobs:
   # AKS-Velero-Backup:
   #   runs-on: ubuntu-latest
@@ -72,6 +72,7 @@ jobs:
 
   AKS-Rclone-Sync-To-GKE:
     runs-on: ubuntu-latest
+    needs: AKS-Velero-Backup
     steps:
       - name: Install Rclone
         run: |
