--- a/.github/workflows/AKS-VeleroBackupAndRclone.yml
+++ b/.github/workflows/AKS-VeleroBackupAndRclone.yml
@@ -96,6 +96,10 @@ jobs:
           key = ${{ secrets.AZURE_RCLONE_KEY }}
           EOF
 
-      - name: Run Rclone Sync (ASA To GCS)
+      - name: Dry Run Rclone Sync (ASA To GCS)
         run: |
           rclone --config /tmp/rclone.conf sync rclone-aks:velero rclone-gcs:aks-backups --progress --dry-run 
+
+      - name: Run Rclone Sync (ASA To GCS)
+        run: |
+          rclone --config /tmp/rclone.conf sync rclone-aks:velero rclone-gcs:aks-backups --progress
