--- a/.github/workflows/AKS-VeleroBackupAndRclone.yml
+++ b/.github/workflows/AKS-VeleroBackupAndRclone.yml
@@ -51,7 +51,10 @@ jobs:
             --backup-location-config resourceGroup=${{ env.RESOURCE_GROUP }},storageAccount=${{ env.STORAGE_ACCOUNT_NAME }} \
             --use-node-agent \
             --default-volumes-to-fs-backup \
-            --image velero/velero:v1.16.1 \
+            --velero-pod-cpu-request=100m \
+            --velero-pod-mem-request=128Mi \
+            --node-agent-pod-cpu-request=100m \
+            --node-agent-pod-mem-request=128Mi
 
       - name: Wait for Velero pods
         run: sleep 15
@@ -100,4 +103,4 @@ jobs:
       - name: Run Rclone Backup Sync (ASA To GCS)
         run: |
           rclone --config /tmp/rclone.conf sync rclone-aks:velero rclone-gcs:velero-backup-gke-cluster --progress
-          
+#            --image velero/velero:v1.16.1 \
