--- a/.github/workflows/GKE-VeleroBackupAndRclone.yml
+++ b/.github/workflows/GKE-VeleroBackupAndRclone.yml
@@ -1,9 +1,9 @@
 name: GKE Velero Backup and Cross-Cloud Sync
-#on: [workflow_call]
-on:
-  push:
-    branches:
-      - velvobackuptest
+on: [workflow_call]
+# on:
+#   push:
+#     branches:
+#       - velvobackuptest
 
 jobs:
   GKE-Cluster-velero-backup:
