--- a/.github/workflows/MultiCloudZAPSecurityScan.yml
+++ b/.github/workflows/MultiCloudZAPSecurityScan.yml
@@ -11,9 +11,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: master
+          ref: main
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.14.0
         with:
           target: 'http://multiclouddr.trafficmanager.net'
+          rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
