ZAP Scan Deployed

--- a/.github/workflows/MultiCloudZAPSecurityScan.yml
+++ b/.github/workflows/MultiCloudZAPSecurityScan.yml
@@ -3,6 +3,11 @@ on:
     branches:
       - velvobackuptest
   workflow_dispatch:
+  
+permissions:
+  contents: read
+  issues: write
+ 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
