--- a/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
+++ b/.github/workflows/MultiCloudBackupAndSyncPipeline.yml
@@ -3,7 +3,7 @@ name: Conditional Multi-Cloud Velero Backup with Rclone
 # on:
 #   push:
 #     branches:
-#       - velvobackuptest
+#       - main
 on:
   schedule:
     - cron: '0 * * * *'
