--- a/.github/workflows/AKS-Velero-Restore.yml
+++ b/.github/workflows/AKS-Velero-Restore.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           resource-group: ${{ env.AKS_RESOURCE_GROUP }}
           cluster-name: ${{ env.CLUSTER_NAME }}
-          
+
       - name: Install Velero CLI
         run: |
           curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.13.2/velero-v1.13.2-linux-amd64.tar.gz | tar -xz
@@ -34,9 +34,10 @@ jobs:
 
       - name: Trigger Restore Process
         run: |
-          LATEST_BACKUP=$(velero backup get --output json | jq -r 'map(select(.status.phase=="Completed")) | sort_by(.status.completionTimestamp) | last | .metadata.name')
-          echo "Restoring from backup: $LATEST_BACKUP"
-          velero restore create --from-backup $LATEST_BACKUP
+          velero backup get
+          # LATEST_BACKUP=$(velero backup get --output json | jq -r 'map(select(.status.phase=="Completed")) | sort_by(.status.completionTimestamp) | last | .metadata.name')
+          # echo "Restoring from backup: $LATEST_BACKUP"
+          # velero restore create --from-backup $LATEST_BACKUP
           
       - name: Wait for Restore Progress
         run: sleep 30
