--- a/.github/workflows/GKE-Velero-Restore.yml
+++ b/.github/workflows/GKE-Velero-Restore.yml
@@ -51,9 +51,10 @@ jobs:
 
       - name: Trigger Restore Process
         run: |
-          LATEST_BACKUP=$(velero backup get --output json | jq -r 'map(select(.status.phase=="Completed")) | sort_by(.status.completionTimestamp) | last | .metadata.name')
-          echo "Restoring from backup: $LATEST_BACKUP"
-          velero restore create --from-backup $LATEST_BACKUP
+          velero backup get
+          # LATEST_BACKUP=$(velero backup get --output json | jq -r 'map(select(.status.phase=="Completed")) | sort_by(.status.completionTimestamp) | last | .metadata.name')
+          # echo "Restoring from backup: $LATEST_BACKUP"
+          # velero restore create --from-backup $LATEST_BACKUP
          
       - name: Wait Restore Process
         run: |
