--- a/.github/workflows/MultiCloudInfraProvisioningPipeline.yml
+++ b/.github/workflows/MultiCloudInfraProvisioningPipeline.yml
@@ -49,24 +49,24 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name: Set Version
-      #   id: set_version
-      #   run: |
-      #     VERSION=$(date +%Y%m%d%H%M%S)
-      #     echo "VERSION=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
-      #     echo "VERSION=$VERSION"
-      #     echo "VERSION=$(date +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
+      - name: Set Version
+        id: set_version
+        run: |
+          VERSION=$(date +%Y%m%d%H%M%S)
+          echo "VERSION=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
+          echo "VERSION=$VERSION"
+          echo "VERSION=$(date +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
 
-      # - name: Push App Image
-      #   run: |
-      #     docker tag ieee32675multiclouddr-app ${{ secrets.DOCKER_USERNAME }}/multiclouddrapp:$VERSION
-      #     docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrapp:$VERSION
+      - name: Push App Image
+        run: |
+          docker tag ieee32675multiclouddr-app ${{ secrets.DOCKER_USERNAME }}/multiclouddrapp:$VERSION
+          docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrapp:$VERSION
       
-      #     docker tag ieee32675multiclouddr-web ${{ secrets.DOCKER_USERNAME }}/multiclouddrweb:$VERSION
-      #     docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrweb:$VERSION
+          docker tag ieee32675multiclouddr-web ${{ secrets.DOCKER_USERNAME }}/multiclouddrweb:$VERSION
+          docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrweb:$VERSION
       
-      #     docker tag ieee32675multiclouddr-database ${{ secrets.DOCKER_USERNAME }}/multiclouddrdatabase:$VERSION
-      #     docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrdatabase:$VERSION
+          docker tag ieee32675multiclouddr-database ${{ secrets.DOCKER_USERNAME }}/multiclouddrdatabase:$VERSION
+          docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrdatabase:$VERSION
 
 
   AKS-Infrastructure-Provisioning-With-Terraform:
@@ -158,8 +158,7 @@ jobs:
           kubectl set image deployment/app app-container=${{ secrets.DOCKER_USERNAME }}/app:$VERSION
           kubectl set image deployment/web web-container=${{ secrets.DOCKER_USERNAME }}/web:$VERSION
           kubectl set image deployment/database mysql=${{ secrets.DOCKER_USERNAME }}/mysqldb:$VERSION
-          kubectl set image deployment/phpmyadmin phpmyadmin=${{ secrets.DOCKER_USERNAME }}/phpmyadmin:$VERSION
-
+         
 
   GKE-Infrastructure-Provisioning-With-Terraform:
     name: GKE Terraform Plan and Apply
@@ -271,4 +270,4 @@ jobs:
           kubectl set image deployment/app app-container=${{ secrets.DOCKER_USERNAME }}/app:$VERSION
           kubectl set image deployment/web web-container=${{ secrets.DOCKER_USERNAME }}/web:$VERSION
           kubectl set image deployment/database mysql=${{ secrets.DOCKER_USERNAME }}/mysqldb:$VERSION
-          kubectl set image deployment/phpmyadmin phpmyadmin=${{ secrets.DOCKER_USERNAME }}/phpmyadmin:$VERSION
+         
