--- a/.github/workflows/MultiCloudInfraProvisioningPipeline.yml
+++ b/.github/workflows/MultiCloudInfraProvisioningPipeline.yml
@@ -164,7 +164,8 @@ jobs:
     name: GKE Terraform Plan and Apply
     runs-on: ubuntu-latest
     needs: Application-Build-Test-Pushed
-
+    outputs:
+     version: ${{ needs.Application-Build-Test-Pushed.outputs.version }}
     env:
       TF_VAR_gcp_project_id: ${{ secrets.GCP_PROJECT_ID }}
       TF_VAR_gcp_region: ${{ secrets.GCP_REGION }}
@@ -232,6 +233,7 @@ jobs:
       PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
       CLUSTER_NAME: gke-laravel-dr
       CLUSTER_REGION: us-central1
+      VERSION: ${{ needs.GKE-Infrastructure-Provisioning-With-Terraform.outputs.version }}
     
     steps:
       - name: Checkout Repository
@@ -265,6 +267,9 @@ jobs:
           kubectl get nodes
           kubectl get pods
           kubectl get svc
+      - name: Deploy Using Version
+        run: echo "Deploying version $VERSION"
+        
       - name: Rolling Update Deployments
         run: |
           kubectl set image deployment/app app-container=${{ secrets.DOCKER_USERNAME }}/multiclouddrapp:$VERSION
